@@ -4,7 +4,8 @@
 ************************************************************************************************************* 
 *************************************************************************************************************
 
-added/fixed: (dd-mm-yyyy) (please specify date in CET)
+added/fixed: (dd-mm-yyyy) (please specify date in CET) 
+  - 29-04-2005 fixed: Multichannel audio wasn't being downmixed properly when ac3 decoder was enabled in dash, but analog autput set in xbmc. Also caused sync problems
   - 28-04-2005 added: Initial Replaygain support to PAPlayer - only works from ID3v2 tags (non-standard) atm.
   - 28-04-2005 added: APE lossless support to PAPlayer.
   - 28-04-2005 changed: Refactored PAPlayer to remove all the mp3-specific code.
